--- a/ASP.Net-Project/Views/Home/Index.cshtml
+++ b/ASP.Net-Project/Views/Home/Index.cshtml
@@ -1,9 +1,21 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<
 
-<div class="text-center">
-    <img src="@Url.Content("~/img/my-notion-face-transparent.png")" alt="Mi Avatar" width="500" />
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+
+<!DOCTYPE
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title>Welcome</title>
+    <link rel="stylesheet" href="" />
+</head>
+<body class="body">
+    <div class="text-center">
+        <img src="@Url.Content("~/img/my-notion-face-transparent.png")" alt="Mi Avatar" width="500" />
+        <h1 class="display-4">Welcome</h1>
+        <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    </div>
+    
+</body>
+</html>
