--- a/ASP.Net-Project/Views/User/Index.cshtml
+++ b/ASP.Net-Project/Views/User/Index.cshtml
@@ -2,6 +2,17 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "User Game";
 }
+<!DOCTYPE <html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title>Welcome</title>
+</head>
+    <body class ="body.css">
+    <input type="text" />
+    <input type="number" />
+    <input type="password" /></body>
+</html>
+
+
 
